<resources>
    <string name="nombre_app">Informes Tec</string>
    <string name="texto_bienvenida">Inicia una nueva aventura con Informes Tec y descubre una nueva forma de ver el mundo</string>
    <string name="boton_comienza">Comienza</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="boton_ingresar">Ingresar</string>
    <string name="recuperar_contrasena">Recupera Tu Contraseña</string>
    <string name="ingresar_google">Ingresa con Google</string>
    <string name="no_tienes_cuenta">No tienes cuenta? </string>
    <string name="registrate">Regístrate</string>
    <string name="nombre_autor">Ivan Dario Ramirez Casallas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_tienda">Mi tienda</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">catalogo</string>
    <string name="carrito">carrito</string>
    <string name="perfil">perfil</string>

    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nombres">Nombres</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="favoritos">Favoritos</string>
    <string name="administrar">Administrar</string>
    <string name="usuarios">Usuarios</string>
    <string name="productos_destacados">PRODUCTOS DESTACADOS</string>
    <string name="imagen_del_producto">imagen del producto</string>
    <string name="agregar_al_carrito">agregar al carrito</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="ingresa_tus_nombres">Ingresa tus nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="ingresa_tus_apellidos">Ingresa tus apellidos</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="correo_ejemplo_com">correo@ejemplo.com</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="repite_tu_contrase_a">Repite tu contraseña</string>
    <string name="acepto_los">Acepto los</string>
    <string name="t_rminos_y_condiciones">términos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="guardar">Guardar</string>
    <string name="ingresar_con_huella_dactilar">Ingresar con huella dactilar</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cliente">cliente</string>
    <string name="nombre_apellido">Nombre Apellido</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="nombre">nombre</string>
    <string name="ejemplo">---</string>
    <string name="apellido">Apellido</string>
    <string name="mi_perfil">Mi Perfil</string>

</resources>